# API_Hunter

./: .gitignore  ANONYMOUS_MODE.md  ANONYMOUS_QUICKSTART.md  BROWSER_DISCOVERY.md  CLASSIFICATION_SYSTEM.md  CLI_DESIGN.md  Cargo.toml  DEEP_ANALYSIS.md  DEEP_JS_ANALYSIS.md  FEATURE_SUMMARY.md  IMPROVEMENTS_COMPLETED.md  KALI_INSTALLATION.md  PERFORMANCE_AND_CLASSIFICATION.md  QUICK_REFERENCE.md  README.md  README.old.md  RESIDENTIAL_IMPLEMENTATION.md  RESIDENTIAL_PROXY_MODE.md  ULTRA_DEEP_TESTING.md  USAGE.md  WAF_DETECTION_AND_BYPASS.md  WAF_QUICKSTART.md  cleanup_guide.py  final_demo.txt  install.sh  report.txt  report_test.txt  update.sh
.github/workflows/: release.yml  run-tests.yml
results/: subdomains.txt  target_apis_sorted.csv  target_apis_stream.csv  target_raw.jsonl  target_top.txt
scripts/: run_tests.ps1
src/: anonymizer.rs  cli.rs  concurrent.rs  config.rs  http_client.rs  lib.rs  main.rs  runner.rs  test_endpoint.rs  utils.rs
src/analyze/: admin_scanner.rs  api_analyzer.rs  cors_checker.rs  fingerprint.rs  mod.rs  risk_classifier.rs  security_headers.rs  vulnerability_scanner.rs
src/auth/: mod.rs  tester.rs
src/discover/: api_docs.rs  browser.rs  crtsh.rs  mod.rs  subdomain.rs  versioning.rs
src/enrich/: json_shape.rs  mod.rs
src/filter/: api_patterns.rs  mod.rs
src/fuzz/: idor_tester.rs  mass_assignment.rs  mod.rs  param_discovery.rs  param_fuzzer.rs
src/gather/: js_deep_analyzer.rs  js_fisher.rs  mod.rs  wayback.rs
src/graphql/: mod.rs  tester.rs
src/output/: async_csv.rs  async_writer.rs  clean_reporter.rs  mod.rs  results_manager.rs  writer_csv.rs  writer_jsonl.rs
src/probe/: advanced_tests.rs  graphql.rs  http_probe.rs  mod.rs  throttle.rs  tls.rs  websocket.rs
src/scoring/: score.rs
src/security/: jwt_analyzer.rs  mod.rs
src/waf/: bypass.rs  detector.rs  mod.rs  signatures.rs
test-logs/20251123_202332/: tests.txt
test-logs/20251123_202501/: clippy.txt  fmt-check.txt  tests.txt
test-logs/20251123_202601/: build-release.txt  clippy.txt  tests.txt
tests/: filter_tests.rs  json_shape_tests.rs
ultra_combined/: subdomains.txt
