[package]
name = "api_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
anyhow = "1.0"
indicatif = "0.17"
urlencoding = "2.1"
dashmap = "5.4"
regex = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.14"
tokio-util = "0.7"
which = "4.4"
url = "2.5"
futures = "0.3"
