[package]
name = "api_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "process", "sync"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
anyhow = "1.0"
indicatif = "0.17"
urlencoding = "2.1"
dashmap = "5.4"
regex = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.14"
tokio-util = "0.7"
which = "4.4"
url = "2.5"
futures = "0.3"
# Performance optimizations
parking_lot = "0.12"           # Faster mutexes than std::sync
ahash = "0.8"                  # Faster hasher
smallvec = "1.11"              # Stack-allocated vectors
rayon = "1.8"                  # Data parallelism
once_cell = "1.19"             # Lazy statics
html-escape = "0.2"            # For XSS testing
rand = "0.8"                   # Random number generation for anonymization
trust-dns-resolver = "0.23"    # DNS over HTTPS (DoH) support
hickory-resolver = "0.24"      # Modern DNS resolver with DoH
# Browser automation for dynamic API discovery
headless_chrome = "1.0"        # Chrome DevTools Protocol
chromiumoxide = "0.7"          # High-level Chrome automation
async-trait = "0.1"            # Async traits
hmac = "0.12"                   # HMAC for JWT verification
sha2 = "0.10"                   # SHA-256 hashing
base64 = "0.21"                 # Base64 encoding/decoding

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1                  # Faster dev builds
